--- a/Conexao/nbproject/project.properties
+++ b/Conexao/nbproject/project.properties
@@ -28,21 +28,15 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SistemaHotel.jar
+dist.jar=${dist.dir}/Conexao.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/SistemaHotel
+dist.jlink.output=${dist.jlink.dir}/Conexao
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\jussi\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\jussi\\OneDrive\\\u00c1rea de Trabalho\\jcalendar\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-2=C:\\Program Files\\jcalendar\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-2}
+    ${libs.MySQL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,8 +71,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=SistemaHotel
-main.class=telas.TelaLogin01
+jlink.launcher.name=Conexao
+main.class=conexao.Conexao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
